# easylife

./: README.MD  docker-compose.yml  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
.github/workflows/: ci.yml
apps/: conftest.py  dependencies.py
apps/api/: auth_backends.py  factories.py  permissions.py  routing.py  services.py  settings.py  tests.py
apps/api/views/auth/: routers.py  schemes.py
apps/api/views/transactions/: handlers.py  routers.py  schemes.py  tests.py
apps/api/views/users/: handlers.py  routers.py  schemes.py  tests.py
apps/backoffice/: admin.py
apps/backoffice/templates/: statistics.html
apps/backoffice/views/: notifications.py  statistics.py  transactions.py  users.py
apps/finance/: abstract.py  constants.py  models.py  services.py  tests.py
apps/finance/management/commands/: populate_historical_data.py
apps/finance/migrations/: 0001_initial.py
apps/notifications/: constants.py  factories.py  models.py  services.py  tasks.py  tests.py
apps/notifications/migrations/: 0001_initial.py
apps/notifications/templates/: new_transaction_email.html  new_transaction_push.txt  new_transaction_subject.txt
apps/users/: constants.py  models.py  services.py  tests.py
apps/users/migrations/: 0001_initial.py
compose/local/django/: Dockerfile
compose/local/django/celery/beat/: start.sh
compose/local/django/celery/flower/: start.sh
compose/local/django/celery/worker/: start.sh
project/: celery.py  settings.py  urls.py
