[tool.poetry]
name = "easylife"
version = "0.1.0"
description = ""
authors = ["krch-sudo <krv93200@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.2"
celery = "^5.4.0"
psycopg2-binary = "^2.9.9"
dj-database-url = "^2.2.0"
sentry-sdk = "^2.16.0"
django-ninja = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
